# Minecrft

./: .checked_files.txt  .clang-format  .gitignore  CMakeLists.txt  FixesToTryAlways.md  LICENSE  Makefile  README.md  TODO.md  _main.cpp  cbuild.json  compile_commands.json  cubeVertices.xcf  drun.cmd  drun.sh  gmon.out  list.py  main  make_release.py  output.txt  program  rebuild.cmd  release.py  remake.cmd  run.cmd  run.py  run.sh
include/: bitarray.hpp  blockarray.hpp  blocks.hpp  buffer.h  chunk.h  chunk.hpp  coherency.hpp  entity.hpp  general.hpp  hashmap.h  indexing.hpp  list.h  logging.hpp  mesh.h  mscene.hpp  pair.hpp  path_config.hpp  perlinNoise.h  posmap.h  scene.hpp  shaders.h  standard.h  standard.hpp  stb_image.hpp  synchronization.hpp  test_scene.hpp  texture.h  vec_hash.hpp  view.h  world.h  world.hpp  xml_extras.hpp
include/game/: blocks.hpp  chunk.hpp  chunk_masks.hpp  colliders.hpp  commands.hpp  entity.hpp  game_state.hpp  input.hpp  main_scene.hpp  menu_scene.hpp  mscene.hpp  save_structure.hpp  structure.hpp  terrain_manager.hpp  threadpool.hpp  world.hpp  world_saving.hpp
include/game/gamemodes/: gamemode.hpp  gamemode_survival.hpp  interactable_base.hpp  structure_capture.hpp  survival.hpp
include/game/items/: block_model.hpp  crafting.hpp  cube_model.hpp  item.hpp  item_model.hpp  item_renderer.hpp  sprite_model.hpp
include/game/models/: generic_model.hpp
include/game/world/: generator.hpp  mesh_generation.hpp  region_lookup.hpp  terrain.hpp  wave_function_collapse.hpp  world.hpp  world_generation.hpp  world_region.hpp  world_stream.hpp
include/glad/: glad.h
include/messaging/: message_interface.hpp
include/parsing/: block_loader.hpp  shader_parser.hpp  source_template.hpp  tokenizer.hpp
include/rendering/: allocator.hpp  bitworks.hpp  bitworks.tpp  buffer.h  buffer.hpp  camera.hpp  chunk_buffer.hpp  compression.hpp  compression.tpp  cubes.hpp  culling.hpp  external_model.hpp  gbuffer.hpp  image_processing.hpp  instanced_mesh.hpp  instancing.hpp  loading.hpp  mesh.h  mesh.hpp  mesh_spec.hpp  model.hpp  region_culler.hpp  shaders.hpp  ssao.hpp  texture.h  texture.hpp  texture_registry.hpp  view.h  view.hpp  wireframes.hpp
include/rendering/opengl/: buffer.hpp  framebuffer.hpp  quad.hpp  shaders.hpp  texture.hpp
include/rendering/vertex_pooling/: pooled_mesh.hpp
include/structure/: allocator.hpp  binary_search.hpp  bitfield.hpp  bitworks.hpp  bytearray.hpp  definitions.hpp  general.hpp  interval.hpp  keyed_storage.hpp  multilevel_pool.hpp  octree.hpp  pool.hpp  record_store.hpp  record_store.impl.hpp  segmented_pool.hpp  segregated_list.hpp  service.hpp
include/structure/allocators/: linear_allocator.hpp
include/structure/caching/: cache.hpp  eviction_policies.hpp
include/structure/serialization/: octree_serializer.hpp  serializer.hpp  serializer_extras.hpp
include/structure/streams/: buffer.hpp  file_stream.hpp  stream.hpp  streamable.hpp
include/structure/synchronization/: guard.hpp  threadlocal.hpp
include/structures/: hashmap.h  posmap.h
include/ui/: backend.hpp  color.hpp  core.hpp  elements.hpp  font.hpp  form.hpp  layouts.hpp  loader.hpp  lua_integration.hpp  manager.hpp  opengl_backend.hpp  tvalue.hpp
include/ui/elements/: selection.hpp
include/worldgen/: worldgen.h  worldgen.hpp  worldgen.tpp
resources/: blocks.config  blocks.xml  items.xml  recipes.xml
resources/shaders/: terrain.fs  terrain.vs
resources/shaders/compute/: region_base.glsl_template
resources/shaders/graphical/: quad.vs  skybox.fs  skybox.vs
resources/structures/: tower.structure
resources/templates/: game.css  game.xml  menu.xml
resources/templates/style/: game.css  general.css  main.css  settings.css
resources/textures/: background.png~  button_border.png~  button_border_hover.png~  grass_top.png~  iron.png~  oak_leaves.png~  oak_log.png~  oak_log_top.png~  stone.png~
resources/textures/block_breaking/: level0.png~  level1.png~  level2.png~  level3.png~  level5.png~
resources/textures/blocks/: crafting_side.png~  crafting_top.png~  grass_bilboard.png~  oak_plank.png~  (+6 more)
shaders/: depth.vs  fragment.fs  skybox.fs  skybox.vs  terrain.fs  terrain.sp  terrain.vs  ui.fs  ui.vs  vertex.vs
shaders/compute/: base.glsl_template  dirt.glsl  grass.glsl  oak_leaves.glsl  oak_log.glsl  stone.glsl  terrain_generation.glsl
shaders/graphical/: blur.fs  depth.vs  skybox.fs  skybox.vs  terrain.fs  terrain.vs
shaders/load_screens/: chunk.fs  chunk.vs
shaders/model/: depthModel.vs  model.vs
shaders/ui/: text.vs  ui.fs  ui.vs
src/: bitarray.cpp  blockarray.cpp  buffer.c  chunk.c  chunk.cpp  entity.cpp  glad.c  hashmap.c  indexing.cpp  list.c  logging.cpp  main.c  main.cpp  mesh.c  mscene.cpp  pair.cpp  perlinNoise.c  posmap.c  scene.cpp  shaders.c  standard.c  standard.cpp  test_scene.cpp  texture.c  vec_hash.cpp  view.c  world.c  world.cpp  xml_extras.cpp
src/game/: blocks.cpp  chunk.cpp  colliders.cpp  commands.cpp  entity.cpp  game_state.cpp  input.cpp  main_scene.cpp  menu_scene.cpp  mscene.cpp  save_structure.cpp  structure.cpp  terrain_manager.cpp  threadpool.cpp  world.cpp  world_saving.cpp
src/parsing/: block_loader.cpp  shader_parser.cpp  source_template.cpp  tokenizer.cpp
src/rendering/: allocator.cpp  bitworks.cpp  buffer.c  buffer.cpp  camera.cpp  chunk_buffer.cpp  compression.cpp  cubes.cpp  culling.cpp  external_model.cpp  gbuffer.cpp  image_processing.cpp  instanced_mesh.cpp  loading.cpp  mesh.c  mesh.cpp  model.cpp  region_culler.cpp  shaders.c  shaders.cpp  ssao.cpp  texture.c  texture.cpp  texture_registry.cpp  view.c  view.cpp  wireframes.cpp
src/structure/: allocator.cpp  bitfield.cpp  bitworks.cpp  buffer.cpp  bytearray.cpp  file_stream.cpp  record_store.cpp  service.cpp
src/structures/: hashmap.c  list.c  posmap.c
src/ui/: backend.cpp  core.cpp  elements.cpp  font.cpp  form.cpp  layouts.cpp  loader.cpp  lua_integration.cpp  manager.cpp  opengl_backend.cpp  style_loader.cpp  tvalue.cpp
src/worldgen/: worldgen.c  worldgen.cpp
templates/: main.css  menu.xml  settings.css
textures/: tilemap.xcf
(+70 files in other folders)
